--- a/about.qmd
+++ b/about.qmd
@@ -24,5 +24,6 @@ I am currently a PhD candiate at the [Faculty of Physics](https://www.physik.lmu
 Before that, I was a Master student in the [Max Planck School Matter to Life](https://mattertolife.maxplanckschools.org/home).
 Before that, I was a Bachelor student in the [Department of Physics](https://phys.metu.edu.tr/) and [Department of Mathematics](https://math.metu.edu.tr/) at the [Middle East Technical University, Turkey](https://www.metu.edu.tr/).
 
-My current research has mainly two branches: one branch is to understand the biophysical mechanism of ageing and rejuvenation, the second branch is to study the emergent phenomena in stochastic many-body particle systems driven by reinforcement learning.
+My current research has mainly two branches: one branch is to understand the biophysical mechanism of ageing and rejuvenation, the second branch is to understand the emergent phenomena intelligent robotic matter.
 
+You can contact me at Onurcan dot Bektas snail lmu dot de.
