--- a/side_projects.qmd
+++ b/side_projects.qmd
@@ -5,7 +5,7 @@ title: "Side projects"
 ## Fast utility functions for R
 R language, however great, is slow to handle calculations done on **billions of rows of data**.
 In such cases, it is faster to call an external compiled function directly from R to streamline the data analysis without needing to switch to another language.
-In that spirit, I implemented a set of utility functions in Rust and made it available as a [R package](http://localhost:5794/projects.html).
+In that spirit, I implemented a set of utility functions in Rust and made it available as a [R package](https://gitlab.com/onurcanbektas/bektas.utils.r).
 Please see the [README](https://gitlab.com/onurcanbektas/bektas.utils.r/-/blob/main/README.md?ref_type=heads) for how to use it, and the man pages for more details on the implemented functions.
 
 ## One-dimensional interacting stochastic many-body particle system (GPU & CPU)
